# songmam

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
example/: .env.templete  app.py  app_direct_chat.py  app_flask.py  app_natural_type.py
example/ARCHIVED/: fbpage.py  messenger.py  server.py
example/handlers/: do.py
example/static/: facebook.js  haha.py
example/templates/: allResponse.html  webview.html
fbmq/: events.py  fbmq.py  template.py
scripts/: .gitignore  ngrok_start.bat  poetry_publish.bat.template
songmam/: __init__.py  api.py  events.py  exceptions.py  humanTyping.py  middleware.py  page.py  security.py  template.py  utils.py  webhook.py
songmam/api/: content.py  events.py
songmam/events/: __init__.py  messages.py
songmam/facebook/: __init__.py  messaging.py  persona.py  send.py  user_profile.py  webhook.py
songmam/facebook/entries/: __init__.py  account_link.py  base.py  deliveries.py  echo.py  game-play.py  game_play.py  handovers.py  messages.py  optin.py  policy-enforcement.py  policy_enforcement.py  postback.py  postbacks.py  reaction.py  read.py  referral.py  standby.py
songmam/facebook/mess/: buttons.py  payload.py  persistent_menu.py  quick_replies.py
songmam/facebook/messaging/: __init__.py  buttonmeesage.py  locale.py  message_tags.py  payload.py  (+4 more)
songmam/models/: __init__.py  page.py  send.py  user_profile.py  webhook.py  webview.py
tests/: test_attachment.py  test_events.py  test_page.py  test_payload.py  test_template.py
tests/real/: test_persona.py  test_send.py
tests/test_models/: test_webview.py
(+52 files in other folders)
