[tool.poetry]
name = "songmam"
version = "0.1.0"
description = "a fork of FBMQ"
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
starlette = "^0.13.4"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
mock = "^4.0.2"
responses = "^0.10.15"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
